--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "primeicons": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
-    "sass": "^1.77.1"
+    "sass": "^1.77.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
