--- a/.github/workflows/workflow-dev.yaml
+++ b/.github/workflows/workflow-dev.yaml
@@ -1,21 +1,16 @@
 name: Build NextJS APP
-
 on: pull_request
-
 jobs:
   build-NextJ-APP:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Using Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 20.
-    - uses: Running Commands
-    - name: run install and build
+      - uses: actions/checkout@v3
+      - name: Using Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.
+      - uses: Running Commands
+      - name: run install and build
         run: |
-            yarn add
-            yarn run build
-
-
+          yarn
+          yarn run build
