--- a/.github/workflows/workflow-dev.yaml
+++ b/.github/workflows/workflow-dev.yaml
@@ -1,15 +1,37 @@
-name: Build NextJS APP
-on: pull_request
+name: Pull Request
+
+on: [pull_request]
+
 jobs:
-    build-NextJ-APP:
+    install:
+        name: Instaliing Packages
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
-            - name: Using Node.js
-              uses: actions/setup-node@v4
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Cache node_modules
+              uses: actions/cache@v4
               with:
-                  node-version: 20.
-            - name: run install and build
-              run: |
-                  yarn
-                  yarn run build
+                  path: node_modules
+                  key: ${{runner.os}}-${{hashFiles('**/yarn.lock')}}
+
+            - name: Install Dependencies
+              run: yarn
+
+    unusedExports:
+        name: Find unused exports (dead code)
+        runs-on: ubuntu-latest
+        needs: install
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Restore node_modules
+              uses: actions/cache@v4
+              with:
+                  path: node_modules
+                  key: ${{runner.os}}-${{hashFiles('**/yarn.lock')}}
+
+            - name: Run ts-prune
+              run: yarn ts-prune --error
