--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "themovie",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^1.7.4",
-    "next": "14.2.3",
-    "primeicons": "^7.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5",
-    "sass": "^1.77.1",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-slick": "^0.23.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "themovie",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "find-deadcode": "ts-prune"
+    },
+    "dependencies": {
+        "axios": "^1.7.4",
+        "next": "14.2.3",
+        "primeicons": "^7.0.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-slick": "^0.30.2",
+        "react-toastify": "^10.0.5",
+        "sass": "^1.77.1",
+        "slick-carousel": "^1.8.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/react-slick": "^0.23.13",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "ts-prune": "^0.10.3",
+        "typescript": "^5"
+    }
 }
