--- a/.github/workflows/workflow-dev.yaml
+++ b/.github/workflows/workflow-dev.yaml
@@ -4,34 +4,18 @@ on: [pull_request]
 
 jobs:
     install:
-        name: Instaliing Packages
+        name: Instaliing Packages and Run App
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Cache node_modules
-              uses: actions/cache@v4
+            - name: Using Node.js
+              uses: actions/setup-node@v4
               with:
-                  path: node_modules
-                  key: ${{runner.os}}-${{hashFiles('**/yarn.lock')}}
+                  node-version: 20.x
 
-            - name: Install Dependencies
-              run: yarn
-
-    unusedExports:
-        name: Find unused exports (dead code)
-        runs-on: ubuntu-latest
-        needs: install
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Restore node_modules
-              uses: actions/cache@v4
-              with:
-                  path: node_modules
-                  key: ${{runner.os}}-${{hashFiles('**/yarn.lock')}}
-
-            - name: Run ts-prune
-              run: yarn find-deadcode
+            - name: Install Dependencies and Run App
+              run: |
+                  yarn
+                  yarn dev
