--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "find-deadcode": "ts-prune --error"
+        "lint": "next lint"
     },
     "dependencies": {
         "axios": "^1.7.4",
@@ -27,7 +26,6 @@
         "@types/react-slick": "^0.23.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "ts-prune": "^0.10.3",
         "typescript": "^5"
     }
 }
