--- a/.github/workflows/workflow-dev.yaml
+++ b/.github/workflows/workflow-dev.yaml
@@ -4,7 +4,7 @@ on: [pull_request, push]
 
 jobs:
     install:
-        name: Instaliing Packages and Run App
+        name: Instaliing Packages and Run Build
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -15,7 +15,7 @@ jobs:
               with:
                   node-version: 20.x
 
-            - name: Install Dependencies and Run App
+            - name: Install Dependencies and Build
               run: |
                   yarn
                   yarn run build
