--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     },
     "dependencies": {
         "axios": "^1.7.4",
+        "jquery": "^3.7.1",
         "next": "14.2.3",
         "primeicons": "^7.0.0",
         "react": "^18",
         "react-dom": "^18",
+        "react-lazy-load-image-component": "^1.6.2",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "sass": "^1.77.1",
