--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-lazy-load-image-component": "^1.6.4",
         "@types/react-slick": "^0.23.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
