--- a/.github/workflows/workflow-dev.yaml
+++ b/.github/workflows/workflow-dev.yaml
@@ -1,21 +1,21 @@
-name: Pull Request
+# name: Pull Request
 
-on: [pull_request, push]
+# on: [pull_request, push]
 
-jobs:
-    install:
-        name: Instaliing Packages and Run Build
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+# jobs:
+#     install:
+#         name: Instaliing Packages and Run Build
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: Checkout
+#               uses: actions/checkout@v4
 
-            - name: Using Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 20.x
+#             - name: Using Node.js
+#               uses: actions/setup-node@v4
+#               with:
+#                   node-version: 20.x
 
-            - name: Install Dependencies and Build
-              run: |
-                  yarn
-                  yarn run build
+#             - name: Install Dependencies and Build
+#               run: |
+#                   yarn
+#                   yarn run build
