--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "axios": "^1.7.4",
         "jquery": "^3.7.1",
-        "next": "14.2.15",
+        "next": "^15.1.6",
         "primeicons": "^7.0.0",
         "react": "^18",
         "react-dom": "^18",
