--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-lazy-load-image-component": "^1.6.2",
+        "react-loading-skeleton": "^3.5.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "sass": "^1.77.1",
