--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@types/react": "19",
+        "@types/react-dom": "19",
         "axios": "^1.7.4",
         "jquery": "^3.7.1",
         "next": "^15.1.6",
         "primeicons": "^7.0.0",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-loading-skeleton": "^3.5.0",
-        "react-slick": "^0.30.2",
+        "react-slick": "^0.30.3",
         "sass": "^1.77.1",
         "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
         "@types/react-slick": "^0.23.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
